# failurelab

./: .gitignore  pyproject.toml
src/failurelab/data/: loader.py  schema.py  split.py  validation.py
src/failurelab/modeling/: baseline.py
tests/: test_baseline.py  test_loader.py  test_schema.py  test_split.py  test_validation.py
