[project]
name = "failurelab"
version = "0.1.0"
description = "ML platform for automated model failure discovery and stress testing"
authors = [
    {name = "Alexander Moor"}
]
license = "MIT"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas (>=3.0.3,<4.0.0)",
    "pytest (>=9.1.1,<10.0.0)"
]

[tool.poetry]
packages = [{ include = "failurelab", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
